# PortfolioDE

./: Dockerfile  README.md
01 - data_quality_project/: .modelo.env  README.md
01 - data_quality_project/src/: contrato.py
01-data-quality-with-pandera/: README.md
01-data-quality-with-pandera/contracts/: contrato_compras.py  contrato_estoque.py  contrato_vendas.py
01-data-quality-with-pandera/data/: compras.xlsx  estoque.xlsx  vendas.xlsx
02-input-validator-with-streamlit/: .gitignore  README.md
03-webscraping-competitive-intelligence/: .gitignore  README.md  requirements.txt
04-deploy-app-com-docker/: README.md
04-deploy-app-with-docker/: README.md  app.py  pyproject.toml
05-etl-with-python-and-duckdb/: README.md  app.py  diferentes_arquivos.py  duckdb.db  file_operation.py  pipeline.py  pipeline_00.py  pipeline_01_avoid_multiple.py  pipeline_02_diferente_arquivos.py  pipeline_03_pipeline.py  pipeline_04_logs.py  pipeline_05_to_many.py  pyproject.toml
05-etl-with-python-and-duckdb/pasta_gdown/: vendas_05_01_2024.parquet
06-pg2aws-etl-ai/: .gitignore  README.md  csv_to_parquet.py  csv_to_sql.py  csv_to_xlsx.py  parquet_to_csv.py  parquet_to_sql.py  parquet_to_xlsx.py  requirements.txt  sql_to_csv.py  sql_to_excel.py  sql_to_parquet.py  sql_to_sql.py  xlsx_to_csv.py  xlsx_to_parquet.py  xlsx_to_sql.py
07-etl-dre-completo/: requirements.txt
08-extraction-pdf-regex/: .gitignore  pyproject.toml
09-API-with-fastapi/: exemplo_00.py  exemplo_01.py  exemplo_requests.py  numeros.txt
data_quality_project/: requirements.txt
(+33 files in other folders)
